# mt_substring_parser

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
activity/: activity.cpp  activity.hpp  activity_dispatcher.cpp  activity_dispatcher.hpp  activity_manager.cpp  activity_manager.hpp  composite_activity.cpp  composite_activity.hpp
activity/workers/: task_queue.cpp  task_queue.hpp  worker_pool.cpp  worker_pool.hpp
data/: data_unit.cpp  data_unit.hpp  data_view.hpp  result_container.cpp  result_container.hpp  shared_storage.hpp
test_data/: light_test_file  light_test_file_unix
test_data/test_data_generator/: test_data_generator.py
text_processing/: text_data_view.cpp  text_data_view.hpp  text_processor.cpp  text_processor.hpp  text_provider.cpp  text_provider.hpp  text_storage.cpp  text_storage.hpp
text_processing/parsing/: single_prefix_mask.cpp  single_prefix_mask.hpp  text_parser.cpp  text_parser.hpp
text_processing/test/: test_utils.cpp  test_utils.hpp  text_processor_test.cpp
